--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
-    <string name="app_name">P02_Login</string>
+    <string name="app_name">Login</string>
     <string name="email" />
     <string name="correo_electr_nico_hint">Correo Electrónico</string>
     <string name="contrase_a_hint">Contraseña</string>
     <string name="iniciar_sesi_n">Iniciar Sesión</string>
+    <string name="Toast">Los campos no deben estar vacíos</string>
+
 </resources>
